[Main] Fixed store card contrast

--- a/src/main.scss
+++ b/src/main.scss
@@ -398,8 +398,8 @@ div[id='gm-settings-inject'] {
 
 .gm-store-card {
   border: 3px solid var(--dotfiles-colorscheme-base-02);
-  background-color: var(--dotfiles-colorscheme-base-02) !important;
 }
+.gm-store-card,
 .gm-store-card > :nth-child(1) {
   background-color: var(--dotfiles-colorscheme-base-01) !important;
 }
